# robotics_coding_learning

./: .gitignore  README.md
2/ans/: my_husky_highlevel_controller  my_notes.md
2/ans/husky_highlevel_controller_class/launch/: class_husky_sub.launch
2/ans/my_husky_highlevel_controller/: CMakeLists.txt  package.xml
2/ans/my_husky_highlevel_controller/config/: config.yaml
2/ans/my_husky_highlevel_controller/launch/: my_husky_sub.launch
2/ans/my_husky_highlevel_controller/src/: my_husky_sub.cpp
3/ans/: my_notes.md
3/ans/husky_highlevel_controller_class/: package.xml
3/ans/husky_highlevel_controller_class/config/: config.yaml
3/ans/husky_highlevel_controller_class/include/husky_highlevel_controller/: HuskyHighlevelController.hpp
3/ans/husky_highlevel_controller_class/src/: HuskyHighlevelController.cpp
3/ans/tf_learning/: CMakeLists.txt  package.xml
3/ans/tf_learning/src/: tf_learning_node.cpp
4/: homework4.launch
OpenCV/: README.md
OpenCV/1_read_image/: CMakeLists.txt  README.md  read_img.cpp
OpenCV/2_open_camera/: CMakeLists.txt  README.md
OpenCV/2_open_camera/src/: open_camera.cpp
OpenCV/3_basic_datatype_in_opencv/: CMakeLists.txt  README.md  cv_basic_datatype.cpp  mat_demo.cpp
OpenCV/4_homography_matrix/: CMakeLists.txt  homography_matrix_demo.cpp
OpenCV/5_mask/: CMakeLists.txt  creat_mask.cpp  mask_demo.cpp
OpenCV/6_detect_opitcalflow/: CMakeLists.txt  main.cpp
ROS/: README.md
ROS/1/ans/: my_notes.md
ROS/4/: localization.yaml
ROS/ETH_ROS_Course/1/ans/: homework_course1.launch
ROS/ETH_ROS_Course/2/ans/husky_highlevel_controller_class/include/husky_highlevel_controller/: HuskyHighlevelController.hpp
ROS/ETH_ROS_Course/2/ans/husky_highlevel_controller_class/src/: HuskyHighlevelController.cpp
ROS/ETH_ROS_Course/3/ans/husky_highlevel_controller_class/: CMakeLists.txt
ROS/ETH_ROS_Course/3/ans/husky_highlevel_controller_class/launch/: class_husky_sub.launch
ROS/env_setup/ros_begining/src/: talker.cpp
ROS/msgs_demo/: CMakeLists.txt  README.md  package.xml
ROS/msgs_demo/msg/: demo_msgs.msg
ROS/msgs_demo/scripts/: useDemoMsg.py
ROS/msgs_demo/src/: useDemoMsg.cpp
ROS/ros_class_cpp_demo/: package.xml
ROS/ros_class_cpp_demo/include/: myClass.h
ROS/ros_class_cpp_demo/src/: main.cpp  myClass.cpp
ROS/ros_image_demo/: CMakeLists.txt  README.md  package.xml
ROS/ros_image_demo/src/: image_pub_node.cpp  image_sub_node.cpp
ROS/rosbag_demo/: CMakeLists.txt  README.md  package.xml
ROS/rosbag_demo/src/: rosbag_read.cpp  rosbag_write.cpp
SLAM/cmake_learning/1_begginning/: CMakeLists.txt  README.md
SLAM/cmake_learning/1_begginning/src/: hello.cpp
SLAM/cmake_learning/2_how_to_add_lib/: CMakeLists.txt  README.md
SLAM/cmake_learning/2_how_to_add_lib/src/: libHello.cpp  libHello.h  main.cpp
SLAM/cmake_learning/3_BOOK_cmake_practice/: README.md
SLAM/cmake_learning/3_BOOK_cmake_practice/t1/: CMakeLists.txt  main.cpp
SLAM/cmake_learning/3_BOOK_cmake_practice/t2/: CMakeLists.txt
SLAM/cmake_learning/3_BOOK_cmake_practice/t2/src/: CMakeLists.txt  main.cpp
SLAM/nonlinear_optimization/: CMakeLists.txt  ceresCurveFitting.cpp  gaussNewton.cpp  hello_cere.cpp  hello_cere_plus.cpp
SLAM/useEigen/: CMakeLists.txt  eigenMatrix.cpp
SLAM/vio_feature/: orb_cv.cpp
env_setup/: ros_IDE_env_setup.md
env_setup/ros_begining/src/: talker.cpp
ros_class_cpp_demo/: CMakeLists.txt  README.md
