<?xml version="1.0"?>
<package>
		<name>msgs_demo</name>
		<version>0.0.1</version>
		<description>msgs demo</description>

		<maintainer email="1479748954@qq.com">jianHuang</maintainer>


		<license>TODO</license>


		<buildtool_depend>catkin</buildtool_depend>
		<build_depend>roscpp</build_depend>
		<build_depend>rospy</build_depend>
		<build_depend>std_msgs</build_depend>
		<build_depend>geometry_msgs</build_depend>
		<!-- 用于自定义消息 -->
		<build_depend>message_generation</build_depend>

		<run_depend>roscpp</run_depend>
		<run_depend>rospy</run_depend>
		<run_depend>std_msgs</run_depend>
        <run_depend>geometry_msgs</run_depend>
		<!-- 用于自定义消息 -->
		<run_depend>message_runtime</run_depend>

		<export>

		</export>
</package>

